--- a/package.json
+++ b/package.json
@@ -1,37 +1,36 @@
 {
-    "name": "transform-nej-to-commonjs",
+    "name": "babel-plugin-transform-nej-modules-es2015",
     "version": "0.0.1",
     "description": "转化 nej 代码至 commonjs",
     "main": "lib/index.js",
-    "files": [
-        "lib",
-        "package.json",
-        "README.md"
-    ],
+    "typings": "lib/index.d.ts",
+    "types": "lib/index.d.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/lleohao/transform-nej-to-commonjs.git"
+        "url": "git+https://github.com/lleohao/babel-plugin-transform-nej-modules-es2015%20.git"
     },
     "keywords": [
         "nej",
         "commonjs",
         "transform"
     ],
-    "author": "",
+    "author": "lleohao <lleohao@hotmail.com>",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/lleohao/transform-nej-to-commonjs/issues"
+        "url": "https://github.com/lleohao/babel-plugin-transform-nej-modules-es2015/issues"
     },
-    "homepage": "https://github.com/lleohao/transform-nej-to-commonjs#readme",
+    "homepage": "https://github.com/lleohao/babel-plugin-transform-nej-modules-es2015#readme",
     "dependencies": {
-        "babel-template": "^7.0.0-beta.3"
+        "@babel/template": "^7.0.0-beta.31",
+        "babel-helper-nej-transforms": "0.0.5"
     },
     "devDependencies": {
+        "@types/babel-core": "^6.25.3",
         "@types/node": "^8.0.49",
-        "babel-core": "^6.26.0",
+        "@babel/core": "^7.0.0-beta.31",
         "cz-conventional-changelog": "^2.1.0",
         "typescript": "^2.6.1"
     },
@@ -39,5 +38,9 @@
         "commitizen": {
             "path": "./node_modules/cz-conventional-changelog"
         }
+    },
+    "directories": {
+        "example": "example",
+        "lib": "lib"
     }
 }
