--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,10 @@
         "target": "es5",
         "module": "commonjs",
         "outDir": "../lib",
-        "sourceMap": true
+        "sourceMap": true,
+        "declaration": true,
+        "lib": [
+            "es2015"
+        ]
     }
 }
