--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     },
     "homepage": "https://github.com/lleohao/babel-plugin-transform-nej-modules-es2015#readme",
     "dependencies": {
-        "@babel/template": "^7.0.0-beta.31",
-        "babel-helper-nej-transforms": "0.0.6"
+        "babel-helper-nej-transforms": "^1.0.0",
+        "babel-template": "^6.26.0"
     },
     "devDependencies": {
-        "@types/node": "^8.0.49",
-        "@babel/core": "^7.0.0-beta.31",
+        "babel-core": "^6.26.0",
         "cz-conventional-changelog": "^2.1.0",
         "typescript": "^2.6.1"
     },
