--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "babel-plugin-transform-nej-modules-es2015",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "description": "转化 nej 代码至 commonjs",
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
@@ -26,7 +26,7 @@
     },
     "homepage": "https://github.com/lleohao/babel-plugin-transform-nej-modules-es2015#readme",
     "dependencies": {
-        "babel-helper-nej-transforms": "^1.0.1",
+        "babel-helper-nej-transforms": "file:../babel-helper-nej-transforms",
         "babel-template": "^6.26.0"
     },
     "devDependencies": {
