--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "babel-plugin-transform-nej-modules-es2015",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "description": "转化 nej 代码至 commonjs",
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
@@ -30,6 +30,7 @@
         "babel-template": "^6.26.0"
     },
     "devDependencies": {
+        "@types/babel-types": "^7.0.1",
         "babel-core": "^6.26.0",
         "cz-conventional-changelog": "^2.1.0",
         "typescript": "^2.6.1"
