--- a/package.json
+++ b/package.json
@@ -1,47 +1,50 @@
 {
-    "name": "babel-plugin-transform-nej-modules-es2015",
-    "version": "1.1.3",
-    "description": "转化 nej 代码至 commonjs",
-    "main": "lib/index.js",
-    "typings": "lib/index.d.ts",
-    "types": "lib/index.d.ts",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc -p src",
-        "clean": "rm -rf lib"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Mammut-FE/babel-plugin-transform-nej-modules-es2015.git"
-    },
-    "keywords": [
-        "nej",
-        "commonjs",
-        "transform"
-    ],
-    "author": "lleohao <lleohao@hotmail.com>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/Mammut-FE/babel-plugin-transform-nej-modules-es2015/issues"
-    },
-    "homepage": "https://github.com/Mammut-FE/babel-plugin-transform-nej-modules-es2015#readme",
-    "dependencies": {
-        "babel-helper-nej-transforms": "^1.1.0",
-        "babel-template": "^6.26.0"
-    },
-    "devDependencies": {
-        "@types/babel-types": "^7.0.1",
-        "babel-core": "^6.26.0",
-        "cz-conventional-changelog": "^2.1.0",
-        "typescript": "^2.6.1"
-    },
-    "config": {
-        "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
-        }
-    },
-    "directories": {
-        "example": "example",
-        "lib": "lib"
-    }
+  "name": "babel-plugin-transform-nej-modules-es2015",
+  "version": "2.0.0",
+  "description": "转化 nej 代码至 commonjs",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "test": "jest",
+    "dev": "tsc -p tsconfig.json -w",
+    "build": "gulp",
+    "prepublish": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mammut-FE/babel-plugin-transform-nej-modules-es2015.git"
+  },
+  "keywords": [
+    "nej",
+    "commonjs",
+    "transform"
+  ],
+  "author": "lleohao <lleohao@hotmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Mammut-FE/babel-plugin-transform-nej-modules-es2015/issues"
+  },
+  "homepage": "https://github.com/Mammut-FE/babel-plugin-transform-nej-modules-es2015#readme",
+  "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/template": "^7.4.4",
+    "@babel/types": "^7.5.5",
+    "babel-helper-nej-transforms": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.8",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-typescript": "^5.0.1",
+    "jest": "^24.8.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.3"
+  },
+  "directories": {
+    "example": "test",
+    "lib": "lib"
+  }
 }
