--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "gulp"
+    "dev": "tsc -p tsconfig.json -w",
+    "build": "gulp",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
